# app/admin/router/dept.go
@@ -16,6 +16,7 @@ func init() {
 func deptRouter(v1 *gin.RouterGroup) {
 	r := v1.Group("/dept")
 	{
+		r.GET("/download", apis.DownloadDeptHandler)
 		r.GET("ping", func(c *gin.Context) {
 			c.String(int(app.CodeSuccess), "ok")
 		})
@@ -30,5 +31,6 @@ func deptAuthRouter(v1 *gin.RouterGroup) {
 		r.POST("/", apis.InsertDeptHandler)
 		r.DELETE("/", apis.DeleteDeptHandle)
 		r.PUT("/", apis.UpdateDeptHandler)
+		r.POST("/superior", apis.SuperiorDeptHandler)
 	}
 }
